Add tests service to docker-compose.yaml

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,21 @@
 services:
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/code
+  db_migration:
+    extends:
+      service: web
+    command: python manage.py migrate
+  runserver:
+    extends:
+      service: web
+    command: python manage.py runserver 0.0.0.0:8000
     ports:
       - "8000:8000"
+  tests:
+    extends:
+      service: web
+    command: python -m pytest tests -v
+    profiles:
+      - test
